# jitterbug

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  install_dev.sh  pyproject.toml  requirements-new.txt  requirements.txt  setup.py  test_algorithms.py
.github/workflows/: ci.yml
docs/: ALGORITHM_SELECTION_GUIDE.md  ALGORITHM_USAGE.md  DOCKER.md  INSTALLATION.md  VERSION_COMPARISON.md  VISUALIZATION_USAGE.md
example/: jitter-dispersion-example.ipynb  jitter-kstest-example.ipynb
example/data/congestion-measurements/: raw.csv
examples/: README.md  algorithm_benchmark.py  api_client_demo.py  basic_analysis.py  config_example.yaml  docker_demo.py  interactive_algorithm_selector.py  jitter_dispersion_analysis.ipynb  kolmogorov_smirnov_analysis.ipynb  output_formats_demo.py  test_new_implementation.py  visualization_demo.py
examples/network_analysis/: README.md  basic_analysis.py
examples/network_analysis/data/: mins.csv
examples/network_analysis/expected_results/: jd_inferences.csv
examples/network_analysis/plots/: README.md  adtk_summary.txt  bcp_summary.txt  rbeast_summary.txt  ruptures_summary.txt  torch_summary.txt
jitterbug/: _jitter.py  _latency_jump.py  bcp.py  cong_inference.py  filters.py  kstest.py  preprocessing.py  signal_energy.py
scripts/: docker-entrypoint.sh
src/jitterbug/: __init__.py  analyzer.py  py.typed
src/jitterbug/analysis/: __init__.py  congestion_inference_analyzer.py  jitter_analyzer.py  latency_jump_analyzer.py
src/jitterbug/api/: __init__.py  app.py  models.py  routes.py  server.py
src/jitterbug/cli/: __init__.py  main.py
src/jitterbug/detection/: __init__.py  algorithms.py  change_point_detector.py
src/jitterbug/io/: __init__.py  data_loader.py  exporters.py
src/jitterbug/models/: __init__.py  analysis.py  config.py  rtt_data.py
src/jitterbug/visualization/: __init__.py  dashboard.py  interactive.py  plotter.py
tests/: __init__.py  test_analyzer.py  test_change_point_algorithms.py  test_models.py
tools/: compare_all_algorithms.py  generate_visualizations.py  jitterbug.py
