[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jitterbug"
version = "2.0.0"
description = "Framework for jitter-based network congestion inference"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Esteban Carisimo", email = "esteban.carisimo@northwestern.edu"}
]
maintainers = [
    {name = "Esteban Carisimo", email = "esteban.carisimo@northwestern.edu"}
]
keywords = ["network", "congestion", "rtt", "jitter", "analysis", "changepoint", "detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Internet :: Log Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ruptures>=1.1.0",
    "typer>=0.9.0",
    "rich>=12.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0"]
influx = ["influxdb-client>=1.30.0"]
visualization = ["matplotlib>=3.5.0", "plotly>=5.0.0"]
jupyter = ["ipykernel>=6.0.0", "jupyter>=1.0.0"]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
all = [
    "torch>=1.9.0",
    "influxdb-client>=1.30.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/estcarisimo/jitterbug"
Repository = "https://github.com/estcarisimo/jitterbug"
"Bug Reports" = "https://github.com/estcarisimo/jitterbug/issues"
Documentation = "https://github.com/estcarisimo/jitterbug/blob/main/README-new.md"

[project.scripts]
jitterbug = "jitterbug.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jitterbug = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["jitterbug"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ruptures.*",
    "bayesian_changepoint_detection.*",
    "influxdb_client.*",
    "matplotlib.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/jitterbug"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]